<resources>
    <string name="app_name">WarsHW2020C</string>
    <string name="Player1Name">Batman</string>
    <string name="Player2Name">SuperMan</string>
    <string name="wind">wind</string>
    <string name="throw_car">throw car</string>
    <string name="kick">kick</string>
    <string name="bat_attack">Bat attack</string>
    <string name="knives">knives</string>
    <string name="winnerName">Batman</string>
    <string name="winnerAnnouncement">Won</string>
    <string name="player1_image">Player1 image</string>
    <string name="winners_image">Winner\'s image</string>
    <string name="laser">laser</string>
    <string name="player2_image">player2_image</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="start_game">Start Game</string>
    <string name="player_1_dice_result">Player 1 dice result</string>
    <string name="player_2_dice_result">Player 2 dice result</string>
    <string name="score_board">Score Board</string>
    <string name="top_10_best_scores">Top 10 best Scores</string>
    <string name="main_menu">Main Menu</string>
    <string name="_1_best_name">1 best name</string>
    <string name="_2_best_name">2 best name</string>
    <string name="_3_best_name">3 best name</string>
    <string name="_4_best_name">4 best name</string>
    <string name="_5_best_name">5 best name</string>
    <string name="_6_best_name">6 best name</string>
    <string name="_7_best_name">7 best name</string>
    <string name="_8_best_name">8 best name</string>
    <string name="_9_best_name">9 best name</string>
    <string name="_10_best_name">10 best name</string>

    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="top_n_board">Top 10 Board</string>
</resources>