<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Board.OLD_Activity_TopNBoard">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_top10_headLine"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:gravity="center"

                android:text="@string/top_10_best_scores"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="35sp"
                android:layout_weight="1"

                tools:text="@string/top_10_best_scores" />

            <Button
                android:id="@+id/btn_top10_backButton"
                android:layout_gravity="end"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/main_menu"
                android:textSize="35sp" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_top10_n1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity=""
                android:text="@string/_1_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_2_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_3_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_4_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_5_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_6_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n7"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_7_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n8"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_8_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_9_best_name"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txt_top10_n10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/_10_best_name"
                android:textSize="30sp" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>