<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Battle">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">



        <RelativeLayout
            android:layout_gravity="start"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="10dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/img_main_player1"
                android:alpha="0"
                android:id="@+id/prgrsBar_main_Player1ProgressBar"  />



            <ImageView
                android:contentDescription="@string/player1_image"
                android:id="@+id/img_main_player1"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_batman" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="0"
                android:text="@string/kick" />

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/bat_attack" />

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/knives" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">


            <LinearLayout
                android:id="@+id/lay_main_rollDice"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_main_startGame"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_game" />

                <ImageButton
                    android:id="@+id/btn_main_rollDice"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/ic_dice"
                    android:contentDescription="@string/roll_dice" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <ImageButton
                        android:contentDescription="@string/player_1_dice_result"
                        android:id="@+id/img_main_diceResultP1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_dice_1"
                        app:srcCompat="@drawable/ic_dice_1" />

                    <ImageButton
                        android:contentDescription="@string/player_2_dice_result"
                        android:id="@+id/img_main_diceResultP2"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_dice_1"
                        app:srcCompat="@drawable/ic_dice_2" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lay_main_winnerAnnouncement"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:alpha="0"
                tools:layout_editor_absoluteX="200dp">


                <ImageView
                    android:id="@+id/img_main_winnerPic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:alpha="100"
                    android:contentDescription="@string/winners_image"
                    android:paddingTop="4dp"
                    app:srcCompat="@drawable/ic_batman" />

                <TextView
                    android:id="@+id/lbl_main_announceWinnerName"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_gravity="center_horizontal"
                    android:alpha="100"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/Player1Name"
                    android:textSize="20sp" />
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_main_atk4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAttackButtons"
                android:tag="3"
                android:text="@string/wind" />

            <Button
                android:id="@+id/btn_main_atk5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAttackButtons"
                android:tag="4"
                android:text="@string/throw_car" />

            <Button
                android:id="@+id/btn_main_atk6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorAttackButtons"
                android:tag="5"
                android:text="@string/laser" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="10dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/img_main_player2"
                android:alpha="0"
                android:id="@+id/prgrsBar_main_Player2ProgressBar"  />

            <ImageView
                android:contentDescription="@string/player2_image"
                android:id="@+id/img_main_player2"
                android:layout_gravity="end"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_superman"
                 />
        </RelativeLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>