<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">



        <RelativeLayout
            android:layout_gravity="start"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="10dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/img_main_player1"
                android:id="@+id/prgrsBar_main_Player1ProgressBar"  />



            <ImageView
                android:contentDescription="Player1 image"
                android:id="@+id/img_main_player1"
                android:layout_centerVertical="true"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/ic_batman" />

        </RelativeLayout>



        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="0"
                android:text="@string/kick" />

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/bat_attack" />

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/knives" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/lay_main_winnerAnnouncement"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:translationY="0dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="200dp"
            android:layout_width="0dp">


            <ImageView
                android:contentDescription="Winner's image"
                android:id="@+id/img_main_winnerPic"
                android:alpha="0"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_weight="1"
                android:paddingTop="4dp"
                app:srcCompat="@drawable/ic_batman" />

            <TextView
                android:id="@+id/lbl_main_announceWinnerName"
                android:layout_width="match_parent"
                android:alpha="0"
                android:layout_height="50dp"
                android:layout_below="@id/img_main_winnerPic"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/Player1Name"
                android:textSize="20sp"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:orientation="vertical">

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="3"
                android:text="@string/wind" />

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="4"
                android:text="@string/throw_car" />

            <Button
                android:background="@color/colorAttackButtons"
                android:id="@+id/btn_main_atk6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:tag="5"
                android:text="laser" />

        </LinearLayout>


        <RelativeLayout
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="10dp"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_marginBottom="10dp"
                android:layout_above="@+id/img_main_player2"
                android:id="@+id/prgrsBar_main_Player2ProgressBar"  />

            <ImageView

                android:id="@+id/img_main_player2"
                android:layout_gravity="end"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_superman" /><![CDATA[

            android:contentDescription="TODO" />


        ]]>
        </RelativeLayout>



    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>